src/objects/Customer_E_Receipts__c.object
<CustomObject>
    <fields>
        <fullName>Barcode__c</fullName>
        <label>Barcode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessCheck_Amount__c</fullName>
        <description>Amount defines the total price or amount customer owes the business.</description>
        <label>BusinessCheck Amount</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cash_Amount__c</fullName>
        <description>Amount defines the total price or amount customer owes the business.</description>
        <label>Cash Amount</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cash_Type__c</fullName>
        <label>Cash Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cashier_userFirstName__c</fullName>
        <description>User first name</description>
        <label>Cashier userFirstName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cashier_userId__c</fullName>
        <description>UserId of the user that completed this action (cashier)</description>
        <label>Cashier userId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cashier_userLastName__c</fullName>
        <description>User last name</description>
        <label>User LastName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cashier_userName__c</fullName>
        <description>Username of the user that completed this action (cashier)</description>
        <label>Cashier userName</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Amount__c</fullName>
        <description>Amount defines the total price or amount customer owes the business.</description>
        <label>Change Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Check_Amount__c</fullName>
        <description>Amount defines the total price or amount customer owes the business.</description>
        <label>Check Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CreditCard_AmountApproved__c</fullName>
        <description>Amount Approved during card payment</description>
        <label>CreditCard AmountApproved</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditCard_AuthCode__c</fullName>
        <description>Card authorization code used for the non integrated electronic tender</description>
        <label>CreditCard AuthCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditCard_AuthToken__c</fullName>
        <description>Reference number for card payment</description>
        <label>CreditCard AuthToken</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditCard_CardToken__c</fullName>
        <description>CardToken for the card payment</description>
        <label>CreditCard CardToken</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditCard_Description__c</fullName>
        <description>Card Description used for card payment</description>
        <label>CreditCard Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditCard_EftTransactionTimestamp__c</fullName>
        <description>Timestamp of the card transaction</description>
        <label>CreditCard EftTransactionTimestamp</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditCard_EntryMode__c</fullName>
        <description>Card Entry Mode used for the card payment</description>
        <label>CreditCard EntryMode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditCard_ExpiratyDate__c</fullName>
        <description>Expiry date for the card payment</description>
        <label>CreditCard ExpiratyDate</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditCard_MaskedCardNumber__c</fullName>
        <description>Masked Card Number</description>
        <label>CreditCard MaskedCardNumber</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditCard_MerchantID__c</fullName>
        <description>Merchant ID number</description>
        <label>CreditCard MerchantID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditCard_TenderType__c</fullName>
        <description>The underlying Type as coded by OVC that drives the tender configurable functionality</description>
        <label>CreditCard TenderType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditCard_TerminalID__c</fullName>
        <label>CreditCard TerminalID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditCard_TotalAmountTransacted__c</fullName>
        <description>Total Amount used for the card payment</description>
        <label>CreditCard TotalAmountTransacted</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditCard_TransactionID__c</fullName>
        <description>Transaction id returned by payment gateway for the card payment</description>
        <label>CreditCard TransactionID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditCard_Type__c</fullName>
        <description>Card type used for the card payment</description>
        <label>CreditCard Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrencyId__c</fullName>
        <label>CurrencyId</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerAddress__c</fullName>
        <label>CustomerAddress</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CustomerCity__c</fullName>
        <label>CustomerCity</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerEmail__c</fullName>
        <label>CustomerEmail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerFirstName__c</fullName>
        <label>CustomerFirstName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerHomePhoneNumber__c</fullName>
        <label>CustomerHomePhoneNumber</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerLastName__c</fullName>
        <label>CustomerLastName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerMobilePhoneNumber__c</fullName>
        <label>CustomerMobilePhoneNumber</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerState__c</fullName>
        <label>CustomerState</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerWorkPhoneNumber__c</fullName>
        <label>CustomerWorkPhoneNumber</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerZipCode__c</fullName>
        <label>CustomerZipCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeviceId__c</fullName>
        <description>This identifies the device where the transaction was done</description>
        <label>DeviceId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiscountTotal__c</fullName>
        <label>DiscountTotal</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <formula>IF(ISBLANK(CustomerEmail__c), nonLoyaltyEmail__c, CustomerEmail__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GiftCard_Amount__c</fullName>
        <label>GiftCard Amount</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GiftCard_Type__c</fullName>
        <label>GiftCard Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GiftCertificate_Amount__c</fullName>
        <description>Amount defines the total price or amount customer owes the business.</description>
        <label>GiftCertificate Amount</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoyaltyPoints__c</fullName>
        <label>LoyaltyPoints</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loyalty_Address__c</fullName>
        <label>Loyalty Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loyalty_Email__c</fullName>
        <label>Loyalty Email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loyalty_FirstName__c</fullName>
        <label>Loyalty FirstName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loyalty_LastName__c</fullName>
        <label>Loyalty LastName</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loyalty_MobilePhoneNumber__c</fullName>
        <label>Loyalty MobilePhoneNumber</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loyalty_Type__c</fullName>
        <label>Loyalty Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MerchTotal__c</fullName>
        <label>MerchTotal</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MoneyOrder_Amount__c</fullName>
        <description>Amount defines the total price or amount customer owes the business.</description>
        <label>MoneyOrder Amount</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PromoTotal__c</fullName>
        <label>PromoTotal</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotion_Name__c</fullName>
        <label>Promotion Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalespersonId__c</fullName>
        <description>Sales Person associasted with the item</description>
        <label>SalespersonId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesperson_Name__c</fullName>
        <description>Sales Person associasted with the item</description>
        <label>Salesperson Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SendData__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SendData</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SpecialPayment_Amount__c</fullName>
        <description>Amount defines the total price or amount customer owes the business.</description>
        <label>SpecialPayment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SpecialPayment_Reason__c</fullName>
        <description>Reason for special payment</description>
        <label>SpecialPayment Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>StoreId__c</fullName>
        <description>StoreId for Store</description>
        <label>StoreId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_City__c</fullName>
        <description>Store city</description>
        <label>Store City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Country__c</fullName>
        <description>Store Country</description>
        <label>Store Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_FaxNumber__c</fullName>
        <description>Store Fax number</description>
        <label>Store FaxNumber</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Name__c</fullName>
        <description>Store Name</description>
        <label>Store Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_PhoneNumber__c</fullName>
        <description>Store Phone Number</description>
        <label>Store PhoneNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Store_TimeZone__c</fullName>
        <description>TimeZone</description>
        <label>Store TimeZone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_ZipCode__c</fullName>
        <description>Store Zip Code</description>
        <label>Store ZipCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Name__c</fullName>
        <description>Store Street name</description>
        <label>Street Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Exempt_Info__c</fullName>
        <description>Tax exempt Info including tax Id stored in loyalty record (May contain country,certificateNum,taxExemptStartDate,taxExemptEndDate)</description>
        <label>Tax Exempt Info</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tax_Percentage__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tax Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Till_Id__c</fullName>
        <description>Id number of the till associated with the device</description>
        <label>Till Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalAmount__c</fullName>
        <label>TotalAmount</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalTaxValue__c</fullName>
        <label>TotalTaxValue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Items__c</fullName>
        <label>Total Items</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Refund_Items__c</fullName>
        <label>Total Refund Items</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransactionId__c</fullName>
        <label>TransactionId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TravelersCheck_Amount__c</fullName>
        <inlineHelpText>Amount defines the total price or amount customer owes the business.</inlineHelpText>
        <label>TravelersCheck Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>localTimeZone__c</fullName>
        <label>localTimeZone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>localTranDate__c</fullName>
        <label>localTranDate</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loyaltyId__c</fullName>
        <description>The ID number of the loyalty customer</description>
        <label>loyaltyId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nonLoyaltyEmail__c</fullName>
        <label>NonLoyaltyEmail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>payments__c</fullName>
        <label>payments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>streetNumber__c</fullName>
        <description>Store Street number</description>
        <label>streetNumber</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tranDate__c</fullName>
        <label>tranDate</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tranItems__c</fullName>
        <label>tranItems</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tranNo__c</fullName>
        <label>tranNo</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tranTypeId__c</fullName>
        <label>tranTypeId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>transactionDiscounts__c</fullName>
        <label>transactionDiscounts</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Customer E-Receipts</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SendData__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CurrencyId__c</columns>
        <columns>Store_Name__c</columns>
        <columns>Street_Name__c</columns>
        <columns>streetNumber__c</columns>
        <columns>Store_City__c</columns>
        <columns>Store_ZipCode__c</columns>
        <columns>Store_Country__c</columns>
        <columns>Salesperson_Name__c</columns>
        <columns>CustomerEmail__c</columns>
        <columns>nonLoyaltyEmail__c</columns>
        <columns>Barcode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CR-{00000}</displayFormat>
        <label>E-Receipts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer E-Receipts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>